--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
-<link rel="stylesheet" href="login.css">
+<link rel="stylesheet" href="../Style/login.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
                         <a href="">Recuperar senha?</a>
                     </div>
                     <br>
-                    <a href = ""> <button class = "entrar"> Entrar </button></a>
+                    <a href = "../bem_vindo/bemvindo.html"> <button class = "entrar"> Entrar </button></a>
                     <br><br>
                     <div class = "ouentao">
                         <div class = "linhas"></div>
