--- a/pages/aluno/aluno.html
+++ b/pages/aluno/aluno.html
@@ -14,43 +14,44 @@
     <script src="../../js/aluno.js" defer></script>
     <script src="../../js/excluiraluno.js" defer></script>
     <script src="../../js/menusidebar.js" defer></script>
-    <script src="../../js/busca.js" defer></script>        
+    <script src="../../js/busca.js" defer></script>
 </head>
 
 <body>
-        <header>
-            <div class="emociona">
-                <img src="../../assets/images/emocionagrupo.svg" />
-            </div>
-            <div class="logouser">
-                <img src="../../assets/icones/user.svg" />
-                <span>Breno Viana</span>
-            </div>
-        </header>
-        <div class="borda">
-            <div class="primeira"></div>
-            <div class="segunda"></div>
-            <div class="terceira"></div>
-            <div class="quarta"></div>
-            <div class="quinta"></div>
+    <header>
+        <div class="emociona">
+            <img src="../../assets/images/emocionagrupo.svg" />
         </div>
+        <div class="logouser">
+            <img src="../../assets/icones/user.svg" />
+            <span>Breno Viana</span>
+        </div>
+    </header>
+    <div class="borda">
+        <div class="primeira"></div>
+        <div class="segunda"></div>
+        <div class="terceira"></div>
+        <div class="quarta"></div>
+        <div class="quinta"></div>
+    </div>
     <nav>
         <div class="barra">
             <div class="lateral">
-                <div class="configmenu"><a href="../bem_vindo/bemvindo.html"><span 
+                <div class="configmenu"><a href="../bem_vindo/bemvindo.html"><span
                             class="material-symbols-outlined">home</span>Início</a></div>
                 <div class="configmenu">
                     <a class="fechado"><span class="material-symbols-outlined">
                             person_add
                         </span>Usuários<span class="material-symbols-outlined icone">
                             chevron_right
-                        </span></a>                        
+                        </span></a>
                     <div class="configmenusub">
                         <a href="../professor/professor.html" class="aberto">Professor</a>
                         <a href="../aluno/aluno.html" class="aberto">Aluno</a>
                     </div>
                 </div>
-                <div class="configmenu"><a href="../dash/dashemocionometro.html"><span class="material-symbols-outlined">
+                <div class="configmenu"><a href="../dash/dashemocionometro.html"><span
+                            class="material-symbols-outlined">
                             favorite
                         </span>
                         Emocionômetro</a></div>
@@ -59,34 +60,36 @@
                                 person
                             </span>
                             Meu perfil</a></div>
-                    <div class="configmenu"><a href="../../pages/login/index.html"><span class="material-symbols-outlined">
+                    <div class="configmenu"><a href="../../pages/login/index.html"><span
+                                class="material-symbols-outlined">
                                 logout
                             </span>
                             Sair</a></div>
                 </div>
     </nav>
-        <div class="frasecentro">
-            <h1 class= "usaProf">Usuário > Aluno</h1>        
-                <div class= "search">
-                    <input id="botaoBusca" class= "busca" type="text" placeholder="Pesquisar uma palavra-chave">
-                    <a href="../aluno/cadastroaluno.html"><button class="botaoCadastro" onclick="novoUsuario()">+ Novo usuário</button></a>
-                </div>        
-                <div class="meio">
-                    <div class="rolagem">
-                        <table class = "table" cellspacing="0" cellpadding="0">
-                            <thead>
-                                <th>Nome</th>
-                                <th>Turma</th>                            
-                                <th>Ativo</th>
-                                <th>Ações</th>
-                            </thead>
-                           <tbody id="tabelaBusca"></tbody>
-                        </table>
-                    </div>            
-                    
-                </div>        
+    <div class="frasecentro">
+        <h1 class="usaProf">Usuário > Aluno</h1>
+        <div class="search">
+            <input id="botaoBusca" class="busca" type="text" placeholder="Pesquisar uma palavra-chave">
+            <a href="../aluno/cadastroaluno.html"><button class="botaoCadastro" onclick="novoUsuario()">+ Novo
+                    usuário</button></a>
         </div>
-    
+        <div class="meio">
+            <div class="rolagem">
+                <table class="table" cellspacing="0" cellpadding="0">
+                    <thead>
+                        <th>Nome</th>
+                        <th>Turma</th>
+                        <th>Ativo</th>
+                        <th>Ações</th>
+                    </thead>
+                    <tbody id="tabelaBusca"></tbody>
+                </table>
+            </div>
+
+        </div>
+    </div>
+
 </body>
 
 </html>
