--- a/pages/aluno/editaaluno.html
+++ b/pages/aluno/editaaluno.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro Aluno</title>
+    <title>Edita Aluno</title>
     <link rel="stylesheet" href="../../pages/style/cadastro.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        <script src="../../js/edita.js" defer></script>
-        <script src="../../js/menusidebar.js" defer></script>
+    <script src="../../js/editaaluno.js" defer></script>
+    <script src="../../js/menusidebar.js" defer></script>
 </head>
 
 <body>
@@ -48,7 +48,8 @@
                         <a href="../aluno/aluno.html" class="aberto">Aluno</a>
                     </div>
                 </div>
-                <div class="configmenu"><a href="../dash/dashemocionometro.html"><span class="material-symbols-outlined">
+                <div class="configmenu"><a href="../dash/dashemocionometro.html"><span
+                            class="material-symbols-outlined">
                             favorite
                         </span>
                         Emocionômetro</a></div>
@@ -79,14 +80,17 @@
                 <div class="alinha">
                     <label class="">Nome</label>
                     <input id="nome" class="editaInput" type="text" placeholder="Digite seu nome">
-                </div>                
+                </div>
                 <div class="alinha">
                     <label class="">Turma</label>
                     <input id="turma" class="editaInput" type="text" placeholder="Digite a Turma">
                 </div>
                 <div class="alinha">
-                    <label class="">Ativo</label>
-                    <input id="ativo" class="checkbox" type="checkbox">
+                    <label for="toggle">Ativo</label>
+                    <label class="toggle">
+                        <input type="checkbox" id="toggle-edicao" name="ativo">
+                        <span class="slider"></span>
+                    </label>
                 </div>
                 <button class="salvar" type="submit"> Salvar </button>
             </form>
