--- a/pages/bem_vindo/bemvindo.html
+++ b/pages/bem_vindo/bemvindo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BemVindo</title>
+    <title>Bem Vindo</title>
     <link rel="stylesheet" href="../../pages/Style/bemvindo.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,20 +34,20 @@
     <nav>
         <div class="barra">
             <div class="lateral">
-                <div class="configmenu"><a href="#"><span 
-                            class="material-symbols-outlined">home</span>Início</a></div>
+                <div class="configmenu"><a href="#"><span class="material-symbols-outlined">home</span>Início</a></div>
                 <div class="configmenu">
                     <a class="fechado"><span class="material-symbols-outlined">
                             person_add
                         </span>Usuários<span class="material-symbols-outlined icone">
                             chevron_right
-                        </span></a>                        
+                        </span></a>
                     <div class="configmenusub">
                         <a href="../professor/professor.html" class="aberto">Professor</a>
                         <a href="../aluno/aluno.html" class="aberto">Aluno</a>
                     </div>
                 </div>
-                <div class="configmenu"><a href="../dash/dashemocionometro.html"><span class="material-symbols-outlined">
+                <div class="configmenu"><a href="../dash/dashemocionometro.html"><span
+                            class="material-symbols-outlined">
                             favorite
                         </span>
                         Emocionômetro</a></div>
