--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
-<link rel="stylesheet" href="../Style/login.css">
+<link rel="stylesheet" href="../fullstack/pages/Style/login.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet">
@@ -14,12 +14,12 @@
 <body>
     <div class="loginpage">
         <div class="esquerda">
-            <img class="coracao" src="../../assets/images/fundocoracao.svg">
+            <img class="coracao" src="../fullstack/assets/images/fundocoracao.svg">
         </div>
         <div class="direita">
             <div class="quadranteum">
                 <div class="blocologin">
-                    <img class="emocionagrupo" src="../../assets/images/emocionagrupo.svg">
+                    <img class="emocionagrupo" src="../fullstack/assets/images/emocionagrupo.svg">
                     <h1>Faça seu login</h1>
                     <form>
                         <div class="content-email">
@@ -42,7 +42,7 @@
                         <a href="">Recuperar senha?</a>
                     </div>
                     <br>
-                    <a href="../bem_vindo/bemvindo.html"> <button class="entrar"> Entrar </button></a>
+                    <a href="../fullstack/pages/bem_vindo/bemvindo.html"> <button class="entrar"> Entrar </button></a>
                     <br><br>
                     <div class="ouentao">
                         <div class="linhas"></div>
