--- a/pages/professor/cadastro.html
+++ b/pages/professor/cadastro.html
@@ -59,7 +59,7 @@
                                 person
                             </span>
                             Meu perfil</a></div>
-                    <div class="configmenu"><a href="../../pages/login/index.html"><span
+                    <div class="configmenu"><a href="../../index.html"><span
                                 class="material-symbols-outlined">
                                 logout
                             </span>
