--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <div class="loginpage">
         <div class="esquerda">
-            <img class="coracao" src="../fullstack/assets/images/fundocoracao.svg">
+            <img class="coracao" src="./assets/images/fundocoracao.svg">
         </div>
         <div class="direita">
             <div class="quadranteum">
                 <div class="blocologin">
-                    <img class="emocionagrupo" src="../fullstack/assets/images/emocionagrupo.svg">
+                    <img class="emocionagrupo" src="./assets/images/emocionagrupo.svg">
                     <h1>Faça seu login</h1>
                     <form>
                         <div class="content-email">
