--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="">Recuperar senha?</a>
                     </div>
                     <br>
-                    <a href="../fullstack/pages/bem_vindo/bemvindo.html"> <button class="entrar"> Entrar </button></a>
+                    <a href="./pages/bem_vindo/bemvindo.html"> <button class="entrar"> Entrar </button></a>
                     <br><br>
                     <div class="ouentao">
                         <div class="linhas"></div>
