--- a/pages/dash/dashemocionometro.html
+++ b/pages/dash/dashemocionometro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dash Emocionometro</title>
-    <link rel="stylesheet" href="../../pages/style/dashemocionometro.css" />
+    <link rel="stylesheet" href="../Style/dashemocionometro.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet" />
